--- a/src/App.css
+++ b/src/App.css
@@ -78,7 +78,7 @@
   position:absolute;
   width:100%;
   height:5px;
-  background-color:black;
+  background-color:grey;
 }
 
 .Divider-horizontal:hover{
@@ -89,7 +89,7 @@
   position:absolute;
   width:5px;
   height:100%;  
-  background-color:black;
+  background-color:grey;
 }
 
 .Divider-vertical:hover{
