--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 .App-toolbar{
   position:absolute;
   width:100%;
-  height:10%;
+  height:10%;  
   background-color: #172c23;
   display:flex;
 }
@@ -60,10 +60,15 @@
 .Button{
   width:100px;
   height:70%;
-  margin-left:10px;
+  margin:10px;
   background-color:darkblue;
   color:white;
   border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  
 }
 
 .Button:hover{
